<resources>
    <string name="app_name">Watch Sensor</string>
    <string name="application_title">Watch Sensor</string>

    <!-- menu -->
    <string name="action_settings">Settings</string>
    <string name="action_upload">Upload</string>
    <string name="action_purge">Purge</string>
    <string name="action_refresh">Refresh</string>


    <!-- UI -->
    <string name="status_fragment_wifi">Wifi</string>
    <string name="status_fragment_wifi_default_value"></string>
    <string name="status_fragment_battery">Battery</string>
    <string name="status_fragment_battery_default_value">0%</string>
    <string name="status_fragment_total">Total</string>
    <string name="status_fragment_total_default_value">0</string>
    <string name="status_fragment_waiting">Waiting</string>
    <string name="status_fragment_waiting_default_value">0</string>
    <string name="status_fragment_recorded">Recorded</string>
    <string name="status_fragment_recorded_default_value">0</string>
    <string name="status_fragment_retrying">Queued</string>
    <string name="status_fragment_retrying_default_value">0</string>
    <string name="status_fragment_uploaded">Uploaded</string>
    <string name="status_fragment_uploaded_default_value">0</string>
    <string name="status_fragment_info">Info</string>
    <string name="status_fragment_movement">Movement</string>


    <string name="settings_fragment_title">Settings</string>

    <!-- Messages -->
    <string name="message_upload_started">Upload started</string>
    <string name="message_data_purged">"Data purged"</string>
    <string name="message_auto_turn_on_wifi">Auto turn on wifi</string>

    <!-- Status -->
    <string name="status_recording">Recording</string>
    <string name="status_sleeping">Sleeping</string>
    <string name="status_wifi_connected">Connected</string>
    <string name="status_wifi_disconnected">Disconnected</string>

    <!-- Upload Job -->
    <string name="upload_job_no_external_power">no external power</string>
    <string name="upload_job_battery_too_low">battery to low at %.0f%%</string>
    <string name="upload_job_wifi_is_not_connected">wifi is not connected</string>

    <!-- Notifications -->
    <string name="notification_title">Watch Sensor Running</string>
    <string name="notification_text">Touch here to view and change settings"</string>


    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preferences Screen -->
    <string name="preference_group_data_title">Connection Information</string>
    <string name="preference_watch_id_title">Watch ID</string>

    <string name="preference_group_sensor_title">Sensors</string>
    <string name="preference_tracking_enabled_title">Tracking Enabled</string>
    <string name="preference_gps_enabled">GPS Enabled</string>

    <string name="preference_heart_rate_title">Heart Rate Frequency</string>
    <string-array name="preference_heart_rate_options">
        <item>Disabled</item>
        <item>Continuous</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
    </string-array>
    <string-array name="preference_heart_rate_values">
        <item>-1</item>
        <item>0</item>
        <item>60</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>1800</item>
        <item>6000</item>
        <item>12000</item>
    </string-array>
    <string name="preference_heart_rate_default">0</string>

    <string name="preference_location_distance_title">GPS Min. Distance</string>
    <string-array name="preference_location_distance_options">
        <item>1 meter</item>
        <item>2 meters</item>
        <item>4 meters</item>
        <item>6 meters</item>
        <item>8 meters</item>
        <item>10 meters</item>
        <item>20 meters</item>
        <item>40 meters</item>
        <item>50 meters</item>
    </string-array>
    <string-array name="preference_location_distance_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>20</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string name="preference_location_distance_default">10</string>


    <string name="preference_location_time_title">GPS Min. Time</string>
    <string-array name="preference_location_time_options">
        <item>1 second</item>
        <item>30 seconds</item>
        <item>1 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
    </string-array>
    <string-array name="preference_location_time_values">
        <item>1000</item>
        <item>30000</item>
        <item>60000</item>
        <item>350000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>6000000</item>
        <item>12000000</item>
    </string-array>
    <string name="preference_location_time_default">600000</string>


    <string name="preference_group_version">Version</string>
</resources>
