<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_group_data_title">

        <EditTextPreference
            android:defaultValue="00000"
            android:key="watch_id"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_watch_id_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_group_sensor_title">

        <SwitchPreference
            android:defaultValue="1"
            android:key="is_tracking_enabled"
            android:title="@string/preference_tracking_enabled_title" />
        <SwitchPreference
            android:defaultValue="1"
            android:key="is_gps_enabled"
            android:title="@string/preference_gps_enabled" />
        <ListPreference
            android:defaultValue="@string/preference_heart_rate_default"
            android:entries="@array/preference_heart_rate_options"
            android:entryValues="@array/preference_heart_rate_values"
            android:key="heart_rate_frequency"
            android:title="@string/preference_heart_rate_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_group_version">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:key="app_version"
            android:title="0.0.0.0" />
    </PreferenceCategory>
</PreferenceScreen>