<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anantya.watchsensor.StatusFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textViewWifiStatusTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_fragment_wifi"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/textViewWifiStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/status_fragment_wifi_default_value"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textViewBatteryStatusTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_fragment_battery"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/textViewBatteryStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="@dimen/cell_margin"
                        android:layout_weight="1"
                        android:text="@string/status_fragment_battery_default_value"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRowTotal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewTotalTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_fragment_total"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/textViewTotalStats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="@dimen/cell_margin"
                        android:layout_weight="1"
                        android:text="@string/status_fragment_total_default_value"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRowWaiting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewWaitingTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_fragment_waiting"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/textViewUploadWait"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="@dimen/cell_margin"
                        android:layout_weight="1"
                        android:text="@string/status_fragment_waiting_default_value"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRowRetry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewRetryingTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_fragment_retrying"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/textViewUploadProcessing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="@dimen/cell_margin"
                        android:layout_weight="1"
                        android:text="@string/status_fragment_retrying_default_value"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRowUpload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewUploadedTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_fragment_uploaded"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/textViewUploadDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="@dimen/cell_margin"
                        android:layout_weight="1"
                        android:text="@string/status_fragment_uploaded_default_value"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRowInformation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewInfomationTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_fragment_info"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/textViewInformation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewPercentDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0%"
                        android:textAlignment="center"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
                </TableRow>

            </TableLayout>


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
